--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -r https://github.com/gtmengine/tiktok3.git"
+    "deploy": "gh-pages -d dist -r https://github.com/Ramazan-Yusupov/tiktok3clone.git"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.1",
